--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -12,6 +12,9 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
 <<<<=====================================================================>>>>*/ 
 @media only screen and (max-width: 767px) {
 
+    body {
+        font-size: 15px;
+    }
     .ptb-100 {
         padding-top: 60px;
         padding-bottom: 60px;
@@ -34,6 +37,9 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .pb-70 {
         padding-bottom: 35px;
     }
+    p {
+        font-size: 15px;
+    }
     .shape {
         display: none;
     }
@@ -53,6 +59,9 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .main-btn {
         font-size: 14px;
         padding: 15px 30px;
+        i {
+            margin-left: 10px;
+        }
     }
     .main-detail-btn {
         font-size: 16px;
@@ -95,6 +104,30 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             margin-top: 30px;
         }
     }
+    .banner-area-two {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .banner-content-two {
+        margin-bottom: 30px;
+        .target {
+            padding-left: 50px;
+            margin-bottom: 30px;
+            &::before {
+                display: none;
+            }
+        }
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        .circle-btn-two {
+            margin-left: 30px;
+        }
+    }
 
     /** Brands Area CSS
     ======================**/
@@ -127,6 +160,15 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             }
         }
     }
+    .about-us-content-two {
+        h2 {
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+        .mt-40 {
+            margin-top: 20px;
+        }
+    }
 
     /** Section Title Area CSS
     ============================**/
@@ -138,6 +180,11 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         h2 {
             font-size: 30px;
             margin-bottom: 20px;
+        }
+        &.style-two {
+            h2 {
+                font-size: 25px;
+            }
         }
     }
 
@@ -152,6 +199,19 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     }
     .services-btn {
         margin-top: 15px;
+    }
+    .services-wrap {
+        margin: 0;
+    }
+    .services-single-item-two {
+        padding: 30px;
+        h3 {
+            margin-bottom: 15px;
+            font-size: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
     }
 
     /** Who We Are Area CSS
@@ -226,6 +286,52 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .faq-img {
         margin-bottom: 30px;
     }
+
+    /** Counter Area CSS
+    ============================**/
+    .counter-single-item {
+        h2 {
+            font-size: 35px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 14px;
+        }
+    }
+
+    /** Recent Cases Area CSS
+    ============================**/
+    .recent-cases-single-item {
+        padding: 25px;
+        .tag {
+            font-size: 14px;
+        }
+        h3 {
+            font-size: 20px;
+        }
+    }
+    .cases-slide {
+        .owl-nav {
+            position: unset;
+            margin-top: 25px !important;
+        }
+    }
+
+    /** Get In Touch Area CSS
+    ============================**/
+    .get-in-touch-area {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .get-in-touch-content {
+        text-align: center;
+        h2 {
+            font-size: 25px;
+        }
+    }
+    
     
     
 }
@@ -282,6 +388,27 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             margin-top: 30px;
         }
     }
+    .banner-area-two {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .banner-content-two {
+        margin-bottom: 30px;
+        max-width: 100%;
+        .target {
+            margin-bottom: 30px;
+        }
+        h2 {
+            font-size: 40px;
+            margin-bottom: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        .circle-btn-two {
+            margin-left: 30px;
+        }
+    }
 
     /** Brands Area CSS
     ======================**/
@@ -314,6 +441,15 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             }
         }
     }
+    .about-us-content-two {
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+        .mt-40 {
+            margin-top: 20px;
+        }
+    }
 
     /** Section Title Area CSS
     ============================**/
@@ -325,6 +461,11 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         h2 {
             font-size: 35px;
             margin-bottom: 20px;
+        }
+        &.style-two {
+            h2 {
+                font-size: 30px;
+            }
         }
     }
 
@@ -339,6 +480,19 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     }
     .services-btn {
         margin-top: 15px;
+    }
+    .services-wrap {
+        margin: 0;
+    }
+    .services-single-item-two {
+        padding: 30px;
+        h3 {
+            margin-bottom: 15px;
+            font-size: 20px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
     }
 
     /** Who We Are Area CSS
@@ -385,6 +539,53 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         margin-bottom: 30px;
     }
 
+    /** Counter Area CSS
+    ============================**/
+    .counter-single-item {
+        h2 {
+            font-size: 45px;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 14px;
+        }
+    }
+
+    /** Recent Cases Area CSS
+    ============================**/
+    .recent-cases-single-item {
+        .tag {
+            font-size: 14px;
+        }
+        h3 {
+            font-size: 20px;
+        }
+    }
+    .cases-slide {
+        .owl-nav {
+            position: unset;
+            margin-top: 25px !important;
+        }
+    }
+
+    /** Get In Touch Area CSS
+    ============================**/
+    .get-in-touch-area {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .get-in-touch-content {
+        text-align: center;
+        h2 {
+            font-size: 30px;
+        }
+    }
+
+  
+    
+
 }
 
 /* Min width 992px to Max width 1199px 
@@ -394,6 +595,16 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .navbar-area {
         .navbar-brand {
             margin-right: 30px;
+        }
+        &.style-two {
+            .nav-right-options {
+                .main-btn {
+                    padding: 10.5px 18px;
+                    i {
+                        display: none;
+                    }
+                }
+            }
         }
     }
     .main-nav {
@@ -420,6 +631,19 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         max-width: 650px;
         h1 {
             font-size: 60px;
+        }
+    }
+    .banner-area-two {
+        padding-top: 100px;
+    }
+    .banner-content-two {
+        h2 {
+            font-size: 50px;
+            margin-bottom: 30px;
+            margin-bottom: 30px;
+        }
+        p {
+            margin-bottom: 30px;
         }
     }
 
@@ -452,6 +676,18 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     }
     .services-btn {
         margin-top: 15px;
+    }
+    .services-wrap {
+        margin: 0;
+    }
+    .services-single-item-two {
+        padding: 30px;
+        h3 {
+            margin-bottom: 15px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
     }
 
     /** Who We Are Area CSS
@@ -494,6 +730,31 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         }
     }
 
+    /** Counter Area CSS
+    ============================**/
+    .counter-single-item {
+        h2 {
+            font-size: 55px;
+            margin-bottom: 15px;
+        }
+    }
+
+    /** Recent Cases Area CSS
+    ============================**/
+    .recent-cases-single-item {
+        padding: 30px;
+    }
+    .get-in-touch-area {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .get-in-touch-area {
+        h2 {
+            font-size: 35px;
+        }
+    }
+    
+
 }
 
 /* Min width 1200px to Max width 1320px 
@@ -503,6 +764,16 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     .navbar-area {
         .navbar-brand {
             margin-right: 100px;
+        }
+        &.style-two {
+            .nav-right-options {
+                .main-btn {
+                    padding: 10.5px 18px;
+                    i {
+                        margin-left: 5px;
+                    }
+                }
+            }
         }
     }
 
@@ -525,6 +796,18 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
                 font-size: 17px;
             }
         }
+    }
+    .services-single-item-two {
+        h3 {
+            font-size: 20px;
+        }
+    }
+    
+    /** Recent Cases Area CSS
+    ============================**/
+    .get-in-touch-area {
+        margin-left: 0;
+        margin-right: 0;
     }
 
 }
@@ -625,7 +908,6 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         .main-nav {
             display: none !important;
         }
-
         .nav-right-options {
             position: absolute;
             top: 7px;
@@ -664,6 +946,11 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
                     color: $white-color
                 }
             }
+        }
+        &.style-two {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+            padding-top: 20px !important;
+            padding-bottom: 20px !important;
         }
     }
     .mean-container {
