--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,11 +22,16 @@ Version: 1.0
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
 
 /*
 01 - Fonts Variable Style
 <<<<======================================================>>>>*/ 
 $body-font-family: "Hanken Grotesk", sans-serif;
+$body-font-family-business-agency: "Poppins", sans-serif;
+$heading-font-family-business-agency: "Syne", sans-serif;
+$helvetica-neue-font-family: 'Helvetica Neue';
 
 /*
 02 - Color Variable Style
@@ -50,6 +55,14 @@ body {
     font-family: $body-font-family;
 	color: $body-color;
 	font-weight: 400;
+}
+.business-agency-body {
+	background-color: #0c0c1c;
+	font-family: $body-font-family-business-agency;
+	.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+		font-family: $heading-font-family-business-agency;
+		color: $white-color;
+	}
 }
 .d-table {
     width: 100%;
@@ -183,6 +196,9 @@ textarea {
 .bg-color-030303 {
 	background-color: #030303;
 }
+.bg-color-0c0c1c {
+	background-color: #0c0c1c;
+}
 .bg-img {
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -311,111 +327,42 @@ textarea {
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
-	position: absolute;
-	top: 20px;
-	right: 0;
+	position: fixed;
+	top: 90%;
+	right: 30px;
 	margin: auto;
 	cursor: pointer;
 	border-radius: $border-radius;
+	opacity: 0;
+	transition: $transition;
+	&.active {
+		opacity: 1;
+	}
+	&:hover {
+		background-color: $optional-color;
+	}
 }
 
 /*
 06 - Video Btn Style
 <<<<======================================================>>>>*/
 .video-btn {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	justify-content: center;
-	align-items: center;
-	display: flex;
+	text-align: center;
+	text-decoration: none;
+	i {
+		font-size: 24px;
+		color: $heading-color;
+		width: 55px;
+		height: 55px;
+		line-height: 55px;
+		display: inline-block;
+		background-color: $white-color;
+		border-radius: 50px;
+	}
 	span {
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		position: absolute;
-		content: "";
-		display: block;
-		width: 30px;
-		height: 30px;
-		&::after {
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			position: absolute;
-			content: "";
-			width: 100%;
-			height: 100%;
-			border: 0.1px solid $white-color;
-			animation: videoTwo 8s linear infinite;
-		}
-		&::before {
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			position: absolute;
-			content: "";
-			width: 100%;
-			height: 100%;
-			border: 0.1px solid $main-color;
-			animation: videoTwo 8s linear infinite;
-		}
-		&:nth-child(1) {
-			&::after {
-				animation-delay: 1s;
-			}
-			&::before {
-				animation-delay: 5s;
-			}
-		}
-		&:nth-child(2) {
-			&::after {
-				animation-delay: 2s;
-			}
-			&::before {
-				animation-delay: 6s;
-			}
-		}
-		&:nth-child(3) {
-			&::after {
-				animation-delay: 3s;
-			}
-			&::before {
-				animation-delay: 7s;
-			}
-		}
-		&:nth-child(4) {
-			&::after {
-				animation-delay: 4s;
-			}
-		}
-	}
-	.icon {
-		width: 50px;
-		height: 50px;
-		line-height: 50px;
-		text-align: center;
-		border-radius: 50%;
-		display: block;
 		color: $white-color;
-		font-size: 25px;
-		i {
-			position: relative;
-			left: 2px;
-		}
+		margin-left: 12px;
 	}
-}
-@keyframes videoTwo {
-    0% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(-50%, -50%) scale(5);
-        opacity: 0;
-    }
 }
 
 /*
@@ -462,7 +409,31 @@ textarea {
 09 - Main Btn Style
 <<<<======================================================>>>>*/ 
 .main-btn {
-	
+	background-color: $optional-color;
+	color: $heading-color;
+	padding: 15.5px 30px;
+	font-weight: 500;
+	font-size: 16px;
+	font-family: $helvetica-neue-font-family;
+	text-decoration: none;
+	border-radius: 50px;
+	i {
+		margin-left: 20px;
+	}
+	&:hover {
+		background-color: $main-color;
+		color: $white-color;
+	}
+	&.border-btn {
+		background-color: transparent;
+		border: 1px solid $optional-color;
+		border-radius: 4px;
+		color: $white-color;
+		&:hover {
+			background-color: $optional-color;
+			color: $heading-color;
+		}
+	}
 }
 .circle-btn {
 	i {
@@ -484,6 +455,33 @@ textarea {
 		}
 	}
 }
+.circle-btn-two {
+	width: 100px;
+	height: 100px;
+	display: inline-block;
+	font-size: 16px;
+	font-weight: 500;
+	color: $white-color;
+	border: 1px solid $optional-color;
+	border-radius: 100px;
+	text-align: center;
+	i {
+		display: block;
+		margin-top: 12px;
+	}
+	.btn-info {
+		position: absolute;
+		top: 50%;
+		left: 0;
+		right: 0;
+		transform: translateY(-50%);
+	}
+	&:hover {
+		background-color: $optional-color;
+		color: $heading-color;
+	}
+}
+
 /*
 10 - Main Detail Btn Style
 <<<<======================================================>>>>*/ 
@@ -509,10 +507,10 @@ textarea {
 <<<<======================================================>>>>*/ 
 .section-title {
 	text-align: center;
-	max-width: 900px;
+	max-width: 860px;
 	margin: -5px auto 50px;
-	&.mw-600 {
-		max-width: 600px;
+	&.mw-800 {
+		max-width: 800px;
 	}
 	h2 {
 		font-size: 48px;
@@ -526,25 +524,25 @@ textarea {
 		max-width: 600px;
 		margin: auto;
 	}
+	&.style-two {
+		h2 {
+			font-size: 43px;
+		}
+	}
 	&.white-title {
 		h2 {
 			color: $white-color;
+			line-height: 1.3;
 		}
-	}
-	&.left-align {
-		margin-left: 0;
-		text-align: left;
-	}
-	&.left-title {
-		text-align: left;
-		margin-left: 0;
 	}
 }
 .top-title {
-	font-size: 16px;
-	color: $main-color;
+	font-size: 15px;
+	color: $optional-color;
 	display: block;
 	margin-bottom: 10px;
+	font-family: $helvetica-neue-font-family;
+	font-weight: 500;
 }
 
 /*
@@ -579,10 +577,8 @@ textarea {
 <<<<======================================================>>>>*/ 
 .navbar-area {
 	position: relative;
-	background-color: $white-color;
-	box-shadow: $box-shadow;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
     &.is-sticky {
         top: -1px;
         left: 0;
@@ -590,8 +586,7 @@ textarea {
         z-index: 999;
         position: sticky;
 		animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
-		box-shadow: $box-shadow;
-		background-color: $white-color !important;
+		background-color: #0e0e0e !important;
 	}
 	.navbar-brand {
 		margin-right: 200px;
@@ -607,6 +602,25 @@ textarea {
 		to {
 		  opacity: 1;
 		  transform: translateZ(0);
+		}
+	}
+	&.style-two {
+		.main-nav .navbar .navbar-nav .nav-item .nav-link:hover, .main-nav .navbar .navbar-nav .nav-item .nav-link:focus, .main-nav .navbar .navbar-nav .nav-item .nav-link.active {
+			color: #FF4375;
+		}
+		.main-nav .navbar .navbar-nav .nav-item .dropdown-menu .nav-item .nav-link:hover, .main-nav .navbar .navbar-nav .nav-item .dropdown-menu .nav-item .nav-link:focus, .main-nav .navbar .navbar-nav .nav-item .dropdown-menu .nav-item .nav-link.active {
+			color: #FF4375;
+		}
+		.nav-right-options {
+			.main-btn {
+				background-color: #FF4375;
+				color: $white-color;
+			}
+		}
+		.navbar {
+			border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+			padding-top: 15px;
+			padding-bottom: 15px;
 		}
 	}
 } 
@@ -702,67 +716,12 @@ textarea {
 						position: relative;
 						transition: $transition;
 						z-index: 1;
-						&::before, &::after {
-							content: "";
-							width: 0;
-							height: 2px;
-							position: absolute;
-							transition: all 0.2s linear;
-							background: $main-color;
-							right: 0;
-							top: 0;
-							transition-delay: 0.2s;
-							border-radius: $border-radius;
-							z-index: -1;
-						}
-						&::after {
-							right: auto;
-							left: 0;
-							top: auto;
-							bottom: 0;
-							transition-delay: 0.6s;
+						border-bottom: 1px dashed #efefef;
+						&:last-child {
+							border-bottom: none;
 						}
 						.nav-link {
 							display: block;
-							&::before, &::after {
-								content: "";
-								width: 1px;
-								height: 0;
-								position: absolute;
-								transition: all 0.2s linear;
-								background: $main-color;
-								transition-delay: 0s;
-								left: 0;
-								top: 0;
-								border-radius: $border-radius;
-							}
-							&::after {
-								transition-delay: 0.4s;
-								left: auto;
-								right: 0;
-								top: auto;
-								bottom: 0;
-							}
-						}
-						&:hover, &.active {
-							&::before {
-								width: 100%;
-								transition-delay: 0.4s;
-							}
-							&::after {
-								width: 100%;
-								transition-delay: 0s;
-							}
-							.nav-link {
-								&::before {
-									height: 100%;
-									transition-delay: 0.6s;
-								}
-								&::after {
-									height: 100%;
-									transition-delay: 0.2s;
-								}
-							}
 						}
                         .nav-link {
                             color: $heading-color;
@@ -779,7 +738,8 @@ textarea {
 								}
 								&::before {
 									position: absolute;
-									top: 14px;
+									top: 50%;
+									transform: translateY(-50%);
 									right: 13px;
 									line-height: 1;
 									font-size: 17px;
@@ -808,11 +768,12 @@ textarea {
 											display: none;
 										}
 										&::before {
-											content: "\EA4E";
+											content: "\ea99";
+											font-family: IcoFont;
 											position: absolute;
-											top: 14px;
-											right: 13px;
-											font-family: remixicon !important;
+											top: 50%;
+											transform: translateY(-50%);
+											right: 0;
 											line-height: 1;
 											font-size: 17px;
 										}
@@ -1178,7 +1139,6 @@ textarea {
 		transform: translateY(0);
 	}
 }
-
 .shape {
 	position: absolute;
 	&.shape-1 {
@@ -1187,6 +1147,14 @@ textarea {
 		opacity: 0.6;
 		animation: rotation 20s linear infinite;
 	}
+	&.shape-2 {
+		bottom: 0;
+		right: 400px;
+	}
+	&.shape-3 {
+		top: -350px;
+		right: 0;
+	}
 }
 @keyframes rotation {
 	from {
@@ -1194,6 +1162,63 @@ textarea {
 	}
 	to {
 	  transform: rotate(359deg);
+	}
+}
+.banner-area-two {
+	padding-top: 125px;
+	padding-bottom: 100px;
+}
+.banner-content-two {
+	max-width: 895px;
+	.target {
+		position: relative;
+		padding-left: 280px;
+		margin-bottom: 50px;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 50%;
+			left: 60px;
+			transform: translateY(-50%);
+			width: 200px;
+			height: 1px;
+			background-color: $optional-color;
+		}
+		.target-icon {
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			left: 0;
+		}
+		span {
+			color: $white-color;
+		}
+	}
+	h2 {
+		font-size: 60px;
+		line-height: 1.222;
+		color: $white-color;
+		margin-bottom: 40px;
+	}
+	p {
+		margin-bottom: 40px;
+		color: #A9A9AF;
+		max-width: 735px;
+	}
+	.circle-btn-two {
+		margin-left: 60px;
+	}
+}
+.banner-img {
+	position: relative;
+	z-index: 1;
+	.banner-img-shape {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		right: 0;
+		z-index: -1;
 	}
 }
 
@@ -1252,10 +1277,25 @@ textarea {
 			}
 		}
 	}
-	
 }
 .about-us-img {
 	margin-right: 76px;
+}
+.about-us-content-two {
+	h2 {
+		font-size: 43px;
+		margin-bottom: 40px;
+		line-height: 1.3;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	p {
+		color: #A9A9AF;
+	}
+	.mt-40 {
+		margin-top: 40px;
+	}
 }
 
 /*
@@ -1621,7 +1661,7 @@ textarea {
 }
 
 /*
-22 - Appointment Style
+23 - Appointment Style
 <<<<======================================================>>>>*/
 .appointment-form {
 	.form-group {
@@ -1643,7 +1683,7 @@ textarea {
 }
 
 /*
-22 - Footer Style
+24 - Footer Style
 <<<<======================================================>>>>*/
 .footer-single-item {
 	margin-bottom: 25px;
@@ -1738,4 +1778,221 @@ textarea {
 	span {
 		color: $main-color;
 	}
+}
+
+/*
+25 - Footer Style
+<<<<======================================================>>>>*/
+.services-single-item-two {
+	background-color: #191928;
+	padding: 50px 30px;
+	margin-bottom: 25px;
+	border: 2px solid #191928;
+	transition: $transition;
+	.borders {
+		display: block;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 50px;
+			height: 2px;
+			background-color: $optional-color;
+		}
+	}
+	h3 {
+		font-size: 22px;
+		margin-bottom: 25px;
+		margin-top: 25px;
+		a {
+			color: $white-color;
+			text-decoration: none;
+		}
+	}
+	p {
+		color: #A9A9AF;
+		margin-bottom: 30px;
+	}
+	.read-btn {
+		width: 50px;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		border-radius: 50px;
+		background-color: $white-color;
+		font-size: 20px;
+		i {
+			transition: $transition;
+		}
+		&:hover {
+			background-color: $optional-color;
+			color: $heading-color;
+			i {
+				transform: rotate(-30deg);
+			}
+		}
+	}
+	&:hover {
+		border-color: rgba(255, 255, 255, 0.05);
+	}
+}
+.services-slide {
+	&.owl-carousel {
+		.owl-item {
+			img {
+				width: auto;
+			}
+		}
+	}
+}
+.services-wrap {
+	margin-right: -500px;
+}
+
+/*
+26 - Counter Style
+<<<<======================================================>>>>*/
+.counter-single-item {
+	text-align: center;
+	margin-bottom: 25px;
+	h2 {
+		font-size: 60px;
+		color: $white-color;
+		margin-bottom: 20px;
+		border-bottom: 3px solid $white-color;
+		display: inline-block;
+	}
+	p {
+		font-weight: 500;
+		font-size: 15px;
+		color: #A9A9AF;
+	}
+}
+.counter-wrap {
+	border-top: 1px solid rgba(255, 255, 255, 0.05);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+/*
+27 - Cases Style
+<<<<======================================================>>>>*/
+.recent-cases-single-item {
+	background-color: #191928;
+	padding: 50px 30px;
+	border: 2px solid #191928;
+	transition: $transition;
+	.tag {
+		color: $optional-color;
+		font-size: 15px;
+		font-weight: 600;
+		display: inline-block;
+		margin-bottom: 15px;
+		text-decoration: none;
+	}
+	h3 {
+		font-size: 22px;
+		margin-bottom: 20px;
+		a {
+			color: $white-color;
+			text-decoration: none;
+		}
+	}
+	.cases-img {
+		display: block;
+		margin-bottom: 20px;
+	}
+	p {
+		color: #A9A9AF;
+	}
+	&:hover {
+		border-color: rgba(255, 255, 255, 0.05);
+	}
+}
+.cases-slide {
+	.owl-nav {
+		margin-top: 0 !important;
+		position: absolute;
+		top: -115px;
+		right: 0;
+		.owl-prev, .owl-next {
+			background-color: $white-color !important;
+			width: 50px;
+			height: 50px;
+			line-height: 50px;
+			border-radius: 50px;
+			color: $heading-color;
+			transition: $transition;
+			&:hover {
+				background-color: $optional-color !important;
+				color: $heading-color;
+			}
+		}
+	}
+}
+
+/*
+28 - Get In Touch Style
+<<<<======================================================>>>>*/
+.get-in-touch-area {
+	padding-top: 150px;
+	padding-bottom: 150px;
+	position: relative;
+	z-index: 1;
+	margin-left: 150px;
+	margin-right: 150px;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(25, 25, 40, 0.75);
+		z-index: -1;
+	}
+}
+.get-in-touch-content {
+	h2 {
+		font-size: 43px;
+		line-height: 1.3;
+		margin-bottom: 0;
+	}
+}
+.get-in-touch-btn {
+	a {
+		width: 140px;
+		height: 140px;
+		line-height: 140px;
+		background-color: $optional-color;
+		color: $heading-color;
+		display: inline-block;
+		text-align: center;
+		border-radius: 100px;
+		text-decoration: none;
+		font-weight: 500;
+		font-family: $helvetica-neue-font-family;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 15px;
+			width: 100%;
+			height: 100%;
+			border: 1px solid $heading-color;
+			border-radius: 100px;
+		}
+		&:hover {
+			background-color: $main-color;
+		}
+	}
+}
+
+.team-single-item {
+	background-color: #191928;
+	padding: 50px 30px;
 }
